src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Clock_Format__c</fullName>
        <formula>IF(NOT(ISBLANK(Lead_Local_Time_Setting__c)) &amp;&amp; NOT(Lead_Local_Time_Setting__r.Use_12_Hour_Format__c), &quot;&quot;, IF(Hour__c + Offset__c &lt; 12, &quot;AM&quot;, &quot;PM&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clock Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Icon__c</fullName>
        <formula>IF(Lead_Local_Time_Setting__r.Use_Geolocation__c, IMAGE(&quot;https://www.countryflags.io/&quot; &amp; Country_Code__c &amp; &quot;/flat/16.png&quot;, Country_Code__c, 16, 16), IMAGE(&quot;/resource/1581936179000/localTimeJF__us_flag&quot;, &quot;US&quot;, 13, 16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>IF(Lead_Local_Time_Setting__r.Use_Geolocation__c, Country_Code__c, Country)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_Minutes__c</fullName>
        <formula>MINUTE(TIMEVALUE(NOW()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMT Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Offset__c</fullName>
        <label>GMT Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <formula>HOUR(TIMENOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_12_format__c</fullName>
        <formula>IF ((Hour__c + Offset__c) &gt; 12, (Hour__c + Offset__c) - 12, Hour__c + Offset__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours 12 format</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <formula>TEXT(IF(Lead_Local_Time_Setting__r.Use_12_Hour_Format__c, Hours_12_format__c, Hour__c + Offset__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Local_Time_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Local Time Setting</label>
        <referenceTo>Lead_Local_Time_Setting__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Time__c</fullName>
        <formula>IF(ISBLANK(Country) || (NOT(Lead_Local_Time_Setting__r.Use_Geolocation__c) &amp;&amp; NOT(CONTAINS(&quot;US:United States&quot;, Country))), 
&quot;Unable to define time&quot;, 
Country_Icon__c &amp; &quot; &quot; &amp; IF(State = &quot;&quot;, City, State) &amp; &quot;, &quot; &amp; Country__c &amp; &quot; - &quot; &amp; Time__c &amp; &quot; &quot; &amp; Clock_Format__c &amp; IF(Lead_Local_Time_Setting__r.Use_Geolocation__c, &quot; (&quot; &amp; Time_zone_display_name__c &amp; &quot;)&quot;, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <formula>IF(GMT_Minutes__c &lt; 10, &quot;0&quot; &amp; TEXT(GMT_Minutes__c), TEXT(GMT_Minutes__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offset__c</fullName>
        <formula>IF(Lead_Local_Time_Setting__r.Use_Geolocation__c, GMT_Offset__c, USA_Offset__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <formula>Hours__c &amp; &quot;:&quot; &amp; Minutes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_zone_display_name__c</fullName>
        <label>Time zone display name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Offset__c</fullName>
        <formula>IF(CONTAINS($Label.States_In_GMT_Minus_8, State), -8,
IF(CONTAINS($Label.States_In_GMT_Minus_7, State), -7,
IF(CONTAINS($Label.States_In_GMT_Minus_6, State), -6, 0
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USA Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>